unpackaged/main/default/objects/Webform_Brands__mdt/Webform_Brands__mdt.object-meta.xml
<CustomObject>
    <label>Brand Form - Brand</label>
    <pluralLabel>Brand Form - Brands</pluralLabel>
</CustomObject>