unpackaged/main/default/objects/Webform_Brands__mdt/fields/Brand_Code__c.field-meta.xml
<CustomField>
    <fullName>Brand_Code__c</fullName>
    <description>Brand code mapped to Brand__c field api name</description>
    <label>Brand Code</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>