unpackaged/main/default/objects/Webform_Brands__mdt/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <description>Stores the name of the brands</description>
    <label>Brand_Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tommy Hilfiger</fullName>
                <default>true</default>
                <label>Tommy Hilfiger</label>
            </value>
            <value>
                <fullName>Calvin Klein</fullName>
            </value>
            <value>
                <fullName>IZOD</fullName>
            </value>
            <value>
                <fullName>Van Heusen</fullName>
            </value>
            <value>
                <fullName>True&amp;Co.</fullName>
            </value>
            <value>
                <fullName>Warner</fullName>
            </value>
            <value>
                <fullName>Olga</fullName>
            </value>
            <value>
                <fullName>Calvin Klein - CA</fullName>
            </value>
            <value>
                <fullName>Warner&#39;s</fullName>
                <isActive>false</isActive>
                <label>Warner&#39;s</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>