unpackaged/main/default/objects/Webform_Brands__mdt/fields/Case_Success_Message__c.field-meta.xml
<CustomField>
    <fullName>Case_Success_Message__c</fullName>
    <label>Case Success Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>