unpackaged/main/default/objects/Webform_Brands__mdt/fields/Check_Order_Status_At__c.field-meta.xml
<CustomField>
    <fullName>Check_Order_Status_At__c</fullName>
    <description>Brand specific link to check order status</description>
    <label>Check Order Status At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>