unpackaged/main/default/objects/Webform_Brands__mdt/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <description>The BrandFormHeader static resource contains the logos for various brands. Provide relative URL of logos from this static resource.</description>
    <inlineHelpText>Provide relative URL of logos from BrandFormHeader static resource.</inlineHelpText>
    <label>Logo URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>