unpackaged/main/default/objects/Webform_Brands__mdt/fields/Password_Reset_At__c.field-meta.xml
<CustomField>
    <fullName>Password_Reset_At__c</fullName>
    <description>Brand specific link to reset password</description>
    <label>Password Reset At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>