unpackaged/main/default/objects/Webform_Brands__mdt/fields/Show_Logo__c.field-meta.xml
<CustomField>
    <fullName>Show_Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To show/hide logo in the brand form.</description>
    <label>Show Logo</label>
    <type>Checkbox</type>
</CustomField>