unpackaged/main/default/objects/Webform_Brands__mdt/fields/Track_Order_At__c.field-meta.xml
<CustomField>
    <fullName>Track_Order_At__c</fullName>
    <description>Link to track order</description>
    <label>Track Order At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>