unpackaged/main/default/objects/Webform_Brands__mdt/fields/Use_Single_Brand_Channel__c.field-meta.xml
<CustomField>
    <fullName>Use_Single_Brand_Channel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>By checking this box, you are acknowledging that there&#39;s only a single Brand Channel needed for this brand. This also means, for this Brand, you cannot use multiple Additional Details as you are not using multiple Brand Channels.</inlineHelpText>
    <label>Use Single Brand Channel</label>
    <type>Checkbox</type>
</CustomField>