unpackaged/main/default/objects/Webform_Brands__mdt/listViews/Details.listView-meta.xml
<ListView>
    <fullName>Details</fullName>
    <columns>MasterLabel</columns>
    <columns>Brand_Name__c</columns>
    <columns>Logo_URL__c</columns>
    <columns>Track_Order_At__c</columns>
    <columns>Brand_Code__c</columns>
    <columns>Show_Logo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Details</label>
</ListView>